# pip-private-registry-azure-9505

./: README.md  pyproject.toml
.github/: dependabot.yml
